--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
                 <div>
                     <ul>
                         <li><a href="{{url_for('home.landing_page')}}" style="color: black;"><p class="side-nav-text">Profile</p></li>
-                        <li><a href="{{url_for('home.prof')}}" style="color: black;"><p class="side-nav-text">bibliothèque</p></a></li>
+                        <li><a href="" style="color: black;"><p class="side-nav-text">bibliothèque</p></a></li>
                           
                     </ul>
                     <ul>
