--- a/app/templates/home/add_training.html
+++ b/app/templates/home/add_training.html
@@ -8,26 +8,41 @@
     <h1 style="color: #4F4F4F ;margin-left: 5%;font-size:230%;margin-top: 3%;">Equipes:</h1>
     <div class="container_rose">
         <div class="container_1">
-          <h1 style="padding: 1vh;color: #fdfdfd;">sets de sauts</h1>
+        <h1 style="padding: 1vh;color: #fdfdfd;">sets de sauts</h1>
+        <h1 style="padding: 1vh;color: #fdfdfd6d;margin-left: 25%;margin-top: 32%;">Enter</h1>
         </div>
         <div class="container_1">
-          <h1 style="padding: 1vh;color: #fdfdfd;">sauts</h1>
+        <h1 style="padding: 1vh;color: #fdfdfd;">sauts</h1>
+        <h1 style="padding: 1vh;color: #fdfdfd6d;margin-left: 25%;margin-top: 50%;">Enter</h1>
         </div>
         <div class="container_1">
-          <h1 style="padding: 1vh;color: #fdfdfd;">programme</h1>
+        <h1 style="padding: 1vh;color: #fdfdfd;">programme</h1>
+        <h1 style="padding: 1vh;color: #fdfdfd6d;margin-left: 25%;margin-top: 50%;">Enter</h1>
         </div>
         <div class="container_1">
-          <h1 style="padding: 1vh;color: #fdfdfd;">moitié de prog.</h1>
+        <h1 style="padding: 1vh;color: #fdfdfd;">moitié de prog.</h1>
+        <h1 style="padding: 1vh;color: #fdfdfd6d;margin-left: 25%;margin-top: 32%;">Enter</h1>
         </div>
         <div class="container_2">
-          <div class="container_3">
-          <h1 style="padding: 1vh;color: #fdfdfd;">pirouette</h1></div>
-          <div class="container_3">
-          <h1 style="padding: 1vh;color: #fdfdfd;font-size:medium ;">StSq et ChSq</h1></div>
+        <div class="container_3">
+        <h1 style="padding: 1vh;color: #fdfdfd;">pirouette</h1>
+        <h1 style="padding: 1vh;color: #fdfdfd6d;margin-left: 25%;margin-top: 7%;">Enter</h1></div>
+        
+        <div class="container_3">
+        <h1 style="padding: 1vh;color: #fdfdfd;font-size:medium ;">StSq et ChSq</h1>
+        <h1 style="padding: 1vh;color: #fdfdfd6d;margin-left: 25%;margin-top: 15%;">Enter</h1></div>
+        
         </div>
-      </div>
+    </div>
+    <div class="under_portion">
+        <div class="sent-btn">
+            <a href="{{url_for('home.send_team')}}"<h1 style="font-size: medium;"> envoyer à une équipe</h1></a>
+        </div>
+        <div class="sent-btn">
+            <a href="{{url_for('home.send_student')}}"<h1 style="font-size: medium;"> envoyer à des élèves</h1></a>
+        </div>
 
-
+    </div>
 </div>
 
 
