--- a/app/templates/home/send_team.html
+++ b/app/templates/home/send_team.html
@@ -6,10 +6,7 @@
 
 <div class="container_prof">
     <div class="find_equipe_big">
-        <div class="high_part2">
-            <div><h1 style="color: #fdfdfd;margin-left: 7%;font-size:230%;">Equipes:</h1></div>
-            <div><a href="{{url_for('home.add_team')}}" style="text-decoration: none;" ><h2 style="color: #fdfdfd;font-size:400%;margin-top: 10px;">+</h2></a></div>
-        </div>
+        <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: -3%;">Equipes:</h1>
         
         <div class="search-input_big">
             <input type="search" placeholder="chercher" id="search" data-search-big>
