--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,8 +20,7 @@
                 </div>
                 <div>
                     <ul>
-                        <li><a href="{{url_for('home.landing_page')}}" style="color: black;"><p class="side-nav-text">Profile</p></li>
-                        <li><a href="" style="color: black;"><p class="side-nav-text">bibliothèque</p></a></li>
+                        <li><a href="{{url_for('user.show_profile')}}" style="color: black;"><p class="side-nav-text">Profile</p></li>
                           
                     </ul>
                     <ul>
@@ -48,7 +47,7 @@
     </section>
 
     <script defer type="text/javascript" src="{{url_for('static', filename='js/script.js')}}"></script>
-    <script defer type="text/javascript" src="{{url_for('static', filename='js/happiness.js')}}"></script>
+    
 </body>
 
 </html>
