--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -58,4 +58,6 @@
     </div>
   </div>
 </div>
+
+<script defer type="text/javascript" src="{{url_for('static', filename='js/happiness.js')}}"></script>
 {% endblock %}
