--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -102,6 +102,29 @@ body {
     margin-left: 10px;
 }
 
+.text-input-profile {
+    background: #e6e6e6;
+    height: 40px;
+    display: flex;
+    width: 30%;
+    align-items: center;
+    border-radius: 10px;
+    padding: 0 15px;
+    margin: 5px 0;
+}
+
+.text-input-profile input {
+    background: none;
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    margin-left: 10px;
+}
+
+.text-input-profile ::placeholder {
+    color: #0f0f0f;
+}
 
 ::placeholder {
     color: #9a9a9a;
