--- a/app/templates/home/index_prof.html
+++ b/app/templates/home/index_prof.html
@@ -8,10 +8,11 @@
     <div class="find_equipe">
         <div class="high_part">
             <div><h1 style="color: #fdfdfd;margin-left: 7%;font-size:230%;">Equipes:</h1></div>
-            <div><a href="{{url_for('home.add_team')}}" style="text-decoration: none;" ><h1 style="color: #fdfdfd;font-size:400%;margin-top: 10px;">+</h1></a></div>
-        </div>
+        </div>            <div><a href="{{url_for('home.add_team')}}" style="text-decoration: none;" ><h1 style="color: #fdfdfd;font-size:400%;margin-top: 10px;">+</h1></a></div>
+
         <div class="search-input">
             <input type="search" placeholder="chercher" id="search" data-search>
+
         </div>
         <div class="container_team_cards">
             {% for team in teams %}
@@ -20,7 +21,6 @@
             </div>
             {% endfor %}
         </div>
-     
         
     </div>
     <div class="equipe">
@@ -28,7 +28,6 @@
             <div class="gradient">
             </div>
             <input type="search" placeholder="chercher" id="search" data-search-student>
-            <div><a href="{{url_for('home.add_team')}}" style="text-decoration: none;" ><h1 style="color: #fdfdfd;font-size:400%;margin-top: 10px;">+</h1></a></div>
 
         </div>
         <div class="container_student_cards">
@@ -39,8 +38,10 @@
             </div>
             {% endfor %}
         </div>
+        <div><a href="{{url_for('home.add_team')}}" style="text-decoration: none;" ><h1 style="color: #cce4fd;font-size:400%;margin-left: 30%;">+</h1></a></div>
 
     </div>
+
 
 </div>
 
