--- a/app/templates/home/add_training.html
+++ b/app/templates/home/add_training.html
@@ -6,7 +6,7 @@
     <h1 style="color: #ffe9a2 ;margin-left: 2%;font-size:230%;margin-top: 3%;">Création d'un entrainement:</h1>
 
     
-    <div class="container_rose hide">
+    <div class="container_rose" id="creation-entrainement">
         <div class="container_1">
         <h1 style="padding: 1vh;color: #fdfdfd;">sets</h1>
         
@@ -86,51 +86,86 @@
         <div class="container_3">
             <h1 style="padding: 1vh;color: #fdfdfd;font-size:medium ;">StSq et ChSq</h1>
             <div class="checkbox-stsq">
-                <input type="checkbox" id="StSq" name="StSq" value="StSq">
+                <input type="checkbox" id="StSq" name="StSq" value="StSqL">
                 <label for="StSq">StSq du long</label>
             </div>
             <div class="checkbox-stsq">
-                <input type="checkbox" id="ChSq" name="ChSq" value="ChSq">
+                <input type="checkbox" id="ChSq" name="ChSq" value="ChSqL">
                 <label for="ChSq">ChSq du long</label>
             </div>
             <div class="checkbox-stsq">
-                <input type="checkbox" id="ChSq" name="ChSq" value="ChSq">
+                <input type="checkbox" id="ChSq" name="ChSq" value="ChSqC">
                 <label for="ChSq">StSq du court</label>
             </div>
             <div class="checkbox-stsq">
-                <input type="checkbox" id="ChSq" name="ChSq" value="ChSq">
+                <input type="checkbox" id="ChSq" name="ChSq" value="ChSqC">
                 <label for="ChSq">ChSq du court</label>
             </div>
         </div>
     </div>
 </div>
 
-
-
-
-
-
-<div class="container_rose hide" id="container_team">
+<div class="container_prof hide" id="selection-team">
+  <div class="find_equipe_big">
+      <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%; margin-bottom:2% ;">Choisissez un ou plusieurs <span style="color: #d4ddfc;">élèves</span>:</h1>
+      
+      <div class="search-input_big">
+          <input type="search" placeholder="chercher" id="search" data-search-big>
+      </div>
+      <div class="container_team_cards_big">
+          {% for team in teams %}
+          <div class="teamCard_big2" teamid={{team.id_teams}}>
+              <h2>{{team.name}}</h2>
+          </div>
+          {% endfor %}
+      </div>
+   
+      
+  </div>
 
 
 </div>
 
+<div class="container_prof hide" id="selection-eleve">
+  <div class="find_equipe_big">
+      <h1 style="color: #fdfdfd;margin-left: 5%;font-size:230%;margin-top: 3%; margin-bottom:2% ;">Choisissez une ou plusieurs <span style="color: #d4ddfc;">équipes</span>:</h1>
+      
+      <div class="search-input_big">
+          <input type="search" placeholder="chercher" id="search" data-search-big>
+      </div>
+      <div class="container_student_cards">
+          {% for eleve in eleves %}
+          <div class="studentCard" studentid={{eleve.id_users}}>
+              <h2>{{eleve.first_name}}</h2>
+              <h2>{{eleve.last_name}}</h2>
+          </div>
+          {% endfor %}
+      </div>
+   
+      
+  </div>
 
-<div class="container_rose" id="conatiner_users">
 
 </div>
+
 
 
 
 <div class="under_portion">
-    <div class="sent-btn">
-        <a href="{{url_for('home.send_team')}}"<h1 style="font-size: medium;"> envoyer à une équipe</h1></a>
+    <div class="change-page-button" id="send-selection-team-page">
+        <h1 style="font-size: medium;"> envoyer à une équipe</h1>
     </div>
-    <div class="sent-btn">
-        <a href="{{url_for('home.send_student')}}"<h1 style="font-size: medium;"> envoyer à des élèves</h1></a>
+    <div class="change-page-button" id="send-selection-eleve-page">
+        <h1 style="font-size: medium;"> envoyer à des élèves</h1>
     </div>
+    <div class="change-page-button" id="send-creation-entrainement-page">
+        <h1 style="font-size: medium;"> creation entrainement</h1>
+    </div>
+    <div class="validation-button" id="send-to-database">
+        <h1 style="font-size: medium;"> valider</h1>
 </div>
 </div>
 
 <script defer type="text/javascript" src="{{url_for('static', filename='js/todo_list_training.js')}}"></script>
+<script defer type="text/javascript" src="{{url_for('static', filename='js/search_team-page.js')}}"></script>
 {% endblock %}
