--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -28,21 +28,51 @@
     <div class="container_rose">
       <div class="container_1">
         <h1 style="padding: 1vh;color: #FBBECA;">sets de sauts</h1>
+        {% for set in sets %}
+            <div class="teamCard">
+                <h2>{{set.name}}</h2>
+            </div>
+            {% endfor %}
       </div>
       <div class="container_1">
         <h1 style="padding: 1vh;color: #FBBECA;">sauts</h1>
+        {% for saut in sauts %}
+            <div class="teamCard">
+                <h2>{{saut.name}}</h2>
+            </div>
+            {% endfor %}
       </div>
       <div class="container_1">
         <h1 style="padding: 1vh;color: #FBBECA;">programme</h1>
+        {% for prog in progs %}
+            <div class="teamCard">
+                <h2>{{prog.name}}</h2>
+            </div>
+            {% endfor %}
       </div>
       <div class="container_1">
         <h1 style="padding: 1vh;color: #FBBECA;">moitié de prog.</h1>
+        {% for moitie in moities %}
+            <div class="teamCard">
+                <h2>{{moitie.name}}</h2>
+            </div>
+            {% endfor %}
       </div>
       <div class="container_2">
         <div class="container_3">
         <h1 style="padding: 1vh;color: #FBBECA;">pirouette</h1></div>
+        {% for spin in spins %}
+            <div class="teamCard">
+                <h2>{{spin.name}}</h2>
+            </div>
+            {% endfor %}
         <div class="container_3">
         <h1 style="padding: 1vh;color: #FBBECA;">StSq et ChSq</h1></div>
+        {% for sequence in sequences %}
+            <div class="teamCard">
+                <h2>{{sequence.name}}</h2>
+            </div>
+            {% endfor %}
       </div>
     </div>
     
