--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -357,6 +357,28 @@ ul,li{
     margin:  30px; 
 }
 
+.profil_leftpart {
+    background-color: #e6e6e600;
+    height: 75%;
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 20px;
+}
+
+.profil_rightpart {
+    height: 75%;
+    display: flex;
+    width: 50%;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding: 20px;
+}
+
+
 .container_index_profil {
     margin-left: 10vh;
     margin-top: 3vh;
