--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -12,6 +12,9 @@
 
 
     <div class="container_auth">
+        <div class="design">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" style="width: 100%;margin-left: 3%;" >
+        </div>
     <div class="login">
 
 
