--- a/app/static/css/style-prof.css
+++ b/app/static/css/style-prof.css
@@ -525,6 +525,23 @@ background: none;
     
 }
 
+.finished-btn{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #febcc9;
+  font-size: 12px;
+  border-radius: 15px;
+  border: none;
+  outline: none;
+  width: 80%;
+  height: 90%;
+  font-size: 100%;
+  color: #fdfdfd;
+  cursor: pointer;
+  margin-right: 2%;
+}
+
 .finished-btn:hover{
     background-color: #fdfdfd;
     color: pink;
@@ -623,6 +640,7 @@ ul, li {
     width: 100%;
     height: 49%;
     border-radius: 20px;
+    overflow-y: auto;
 }
 
 .under_portion{
@@ -672,6 +690,27 @@ ul, li {
     align-items: center;
     cursor: pointer;
     margin-left: 20%;
+}
+
+.validation-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fdfdfd;
+    font-size: 12px;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    width: 10%;
+    height: 80%;
+    font-size: 100%;
+    color: #fdd6e2;
+    cursor: pointer;
+    margin-right: 2%;
+}
+
+.validation-button:hover{
+    border: 2px solid #fdd6e2;
 }
 
 .high_part2{
@@ -836,7 +875,6 @@ span::before {
     border-radius: 15%;
 }
 
-/* ca m'etonnerait*/
 
 .checkbox-stsq {
   padding: 7px;
