--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -262,6 +262,7 @@ ul,li{
     width: 100%;
     height: 49%;
     border-radius: 20px;
+    overflow: auto;
 }
 
 .padding_date{
@@ -319,7 +320,7 @@ ul,li{
     font-size: 12px;
     padding: 6px;
     padding-right: 60px;
-    border-radius: 8px;
+    border-radius: 8px 8px 0 0;
     margin-right:auto;
     background-color: rgba(215, 243, 242, 0.205);
     box-shadow: 0 0 17px 10px rgb(0 0 0 / 5%);
@@ -331,6 +332,7 @@ ul,li{
     font-size: 15px;
     font-weight: 600;
     white-space: nowrap;
+    cursor: pointer;
 }
 
 
@@ -341,6 +343,47 @@ ul,li{
     margin: auto;
 }
 
+.bouton-nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 9vw;
+    height: 48vw;
+    font-size: 12px;
+    padding: 6px;
+    padding-right: 60px;
+    border-radius: 0 0 8px 8px;
+    margin-right:auto;
+    background-color: rgba(215, 243, 242, 0.205);
+    box-shadow: 0 0 17px 10px rgb(0 0 0 / 5%);
+}
+
+.bouton-nav a{
+    text-decoration: none;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.bouton-barre{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    width: 9vw;
+    height: 7vw;
+    font-size: 12px;
+    padding: 6px;
+    margin-right: auto;
+    padding-right: 60px;
+
+}
+
+.side-nav-text{
+    color: #6f6f6f;
+}
 
 /*profil*/
 
@@ -395,6 +438,23 @@ ul,li{
     
 }
 
+.todo {
+    color: #ffd372;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fdfdfd;
+    border-radius: 10px;
+    margin: 10px auto 5px auto;
+    padding: 10px 12px;
+    border: 3px solid #fdfdfd;
+    transition: all 0.2s ease;
+    height: 7%;
+    width: 65%;
+    overflow: hidden;
+}
+
 /*prof*/
 
 .container_index {
@@ -416,4 +476,6 @@ ul,li{
     height: 100vh;
     background-color: #FDFDFD;
 }
+
+
 
