--- a/app/templates/home/add_training.html
+++ b/app/templates/home/add_training.html
@@ -131,7 +131,7 @@
           {% for eleve in eleves %}
           <div class="studentCard" studentid={{eleve.id_users}}>
               <h2>{{eleve.first_name}}</h2>
-              <h2>{{eleve.last_name}}</h2>
+              <h2 style="margin-left: 1%;">{{eleve.last_name}}</h2>
           </div>
           {% endfor %}
       </div>
