--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -17,7 +17,7 @@
     <div class="login">
 
 
-        <h3 style="font-size: larger;" class="title">mon <span style="color: #ebcced;font-weight: bold;">profile</span></h3>
+        <h3 style="font-size: larger;" class="title">mon <span style="color: #ebcced;font-weight: bold;">profil</span></h3>
 
         <div class="text-input">
           <h5 for="username" style="color: #6f6f6f;">Username: </h5>
