--- a/app/templates/user/profile_prof.html
+++ b/app/templates/user/profile_prof.html
@@ -4,7 +4,7 @@
 {% block content %}
     <body class="body_profil">
       <div class="container_index_profil">
-        <h2 class="titre_profil">Mon profile</h2>
+        <h2 class="titre_profil">Mon profil</h2>
         <ul>
           <li>Username: {{g.user.username}}</li>
           <li>First name: {{g.user.first_name}}</li>
