--- a/app/static/css/style-prof.css
+++ b/app/static/css/style-prof.css
@@ -235,10 +235,11 @@ body{
     height: 80vh;
     width: 100%;
     margin-top: 5%;
+    overflow-y: scroll;
 }
 
 .studentCard{
-    height: 15%;
+    height: fit-content;
     width: 80%;
     background-color: #FDFDFD;
     border-radius: 15px;
@@ -246,6 +247,7 @@ body{
     display: flex;
     align-items: center;
     box-shadow: 0 0 17px 10px rgb(0 0 0 / 2%);
+    padding: 20px;
 }
 
 .studentCard h2 {
@@ -333,7 +335,7 @@ body{
 }
 
 .teamCard_big{
-    height: 30%;
+    height: 50%;
     width: 80%;
     background-color: #FDFDFD;
     border-radius: 15px;
@@ -933,6 +935,54 @@ option {
 .selected {
     background-color:#febcc9;
 }
+
+
+.text-input {
+    background: #e6e6e6;
+    height: 40px;
+    display: flex;
+    width: 60%;
+    align-items: center;
+    border-radius: 10px;
+    padding: 0 15px;
+    margin: 5px 0;
+}
+
+.text-input input {
+    background: none;
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    margin-left: 10px;
+}
+
+.text-input-profile {
+    background: #e6e6e6;
+    height: 40px;
+    display: flex;
+    width: 30%;
+    align-items: center;
+    border-radius: 10px;
+    padding: 0 15px;
+    margin: 5px 0;
+}
+
+.text-input-profile input {
+    background: none;
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    margin-left: 10px;
+}
+
+.text-input-profile ::placeholder {
+    color: #0f0f0f;
+}
+
+
+
 
 .hide{
     display: none;
